--- a/src/app/includes/front/header/header.component.html
+++ b/src/app/includes/front/header/header.component.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </div>
-  <div class="header-nav">
+  <div class="header-nav" [ngClass]="{'sticky' : isSticky}">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
