--- a/src/app/pages/front/home/home.component.html
+++ b/src/app/pages/front/home/home.component.html
@@ -57,7 +57,7 @@
     <div class="row align-items-center">
       <div class="col-lg-6">
         <div class="about-thumb text-center">
-          <img src="assets/images/about-thumb.png" alt="">
+          <img src="assets/images/about-thumb.png" alt="" class="w-100">
         </div>
       </div>
       <div class="col-lg-6">
@@ -74,7 +74,7 @@
               <a class="main-btn " href="about-us.html">Learn More</a>
             </li>
             <li>
-              <a class="" href="#">Let’s Get Started
+              <a class="ml-2" href="#">Let’s Get Started
                 <i class="fal fa-long-arrow-right"></i>
               </a>
             </li>
@@ -99,28 +99,28 @@
       </div>
     </div>
     <div class="row justify-content-center">
-      <div class="col-lg-3 col-md-6 col-sm-7">
+      <div class="col-lg-3 col-md-6 col-sm-7 mt-2">
         <div class="features-item text-center white-bg wow fadeIn animated" data-wow-duration="2000ms" data-wow-delay="0ms">
           <mat-icon>lock_open</mat-icon>
           <h4 class="title">High Power Security Systems</h4>
           <a href="">Read More</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-7">
+      <div class="col-lg-3 col-md-6 col-sm-7 mt-2">
         <div class="features-item text-center white-bg item-2 wow fadeIn animated" data-wow-duration="2000ms" data-wow-delay="300ms">
           <mat-icon>photo_filter</mat-icon>
           <h4 class="title">UX/UI Design Strategy</h4>
           <a href="">Read More</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-7">
+      <div class="col-lg-3 col-md-6 col-sm-7 mt-2">
         <div class="features-item text-center white-bg item-3 wow fadeIn animated" data-wow-duration="2000ms" data-wow-delay="600ms">
           <mat-icon>widgets</mat-icon>
           <h4 class="title">Product Development</h4>
           <a href="">Read More</a>
         </div>
       </div>
-      <div class="col-lg-3 col-md-6 col-sm-7">
+      <div class="col-lg-3 col-md-6 col-sm-7 mt-2">
         <div class="features-item text-center white-bg item-4 wow fadeIn animated" data-wow-duration="2000ms" data-wow-delay="900ms">
           <mat-icon>vpn_key</mat-icon>
           <h4 class="title">Web Security Solutions</h4>
@@ -195,7 +195,7 @@
 </section>
 <section class="fact-area pt-80 pb-130">
   <div class="container">
-    <div class="row">
+    <div class="row text-center">
       <div class="col-lg-3 col-sm-6">
         <div class="fact-item mt-30">
           <h3 class="title">
@@ -509,7 +509,7 @@
     </div>
     <mdb-carousel [animation]="'slide'" [type]="'carousel-multi-item'">
       <mdb-carousel-item>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-1.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -528,7 +528,7 @@
             <i class="fal fa-quote-right"></i>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-2.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -547,7 +547,7 @@
             <i class="fal fa-quote-right"></i>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-3.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -568,7 +568,7 @@
         </div>
       </mdb-carousel-item>
       <mdb-carousel-item>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-2.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -587,7 +587,7 @@
             <i class="fal fa-quote-right"></i>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-3.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -606,7 +606,7 @@
             <i class="fal fa-quote-right"></i>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-4.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -627,7 +627,7 @@
         </div>
       </mdb-carousel-item>
       <mdb-carousel-item>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-3.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -646,7 +646,7 @@
             <i class="fal fa-quote-right"></i>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-4.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -665,7 +665,7 @@
             <i class="fal fa-quote-right"></i>
           </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-md-4 col-12">
           <div class="testimonial-item white-bg text-center mt-70">
             <img src="assets/images/testimonial-5.jpg" alt="testimonial">
             <div class="star d-flex justify-content-center">
@@ -803,32 +803,32 @@
 <div class="brand-area pb-130">
   <div class="container">
     <div class="row brand-active">
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-2">
         <div class="brand-item text-center">
           <img src="assets/images/barand-1.png" alt="">
         </div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-2">
         <div class="brand-item text-center">
           <img src="assets/images/barand-2.png" alt="">
         </div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-2">
         <div class="brand-item text-center">
           <img src="assets/images/barand-3.png" alt="">
         </div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-2">
         <div class="brand-item text-center">
           <img src="assets/images/barand-4.png" alt="">
         </div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-2">
         <div class="brand-item text-center">
           <img src="assets/images/barand-5.png" alt="">
         </div>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-2 col-md-3 col-sm-6 mb-2">
         <div class="brand-item text-center">
           <img src="assets/images/barand-6.png" alt="">
         </div>
@@ -837,3 +837,4 @@
   </div>
 </div>
 
+<app-footer></app-footer>
