main front pages

--- a/src/app/includes/front/footer/footer.component.html
+++ b/src/app/includes/front/footer/footer.component.html
@@ -54,10 +54,10 @@
                 <a href="#">Latest Services</a>
               </li>
               <li>
-                <a href="#">Need A Career ?</a>
+                <a href="#">Need A Career</a>
               </li>
               <li>
-                <a href="#">Meet The Team</a>
+                <a href="#">Meet Team</a>
               </li>
               <li>
                 <a href="#">Setting & Privacy</a>
