--- a/src/app/includes/dashboard/menu/menu.component.html
+++ b/src/app/includes/dashboard/menu/menu.component.html
@@ -1,43 +1,43 @@
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/maindashboard']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/maindashboard']">
   <mat-icon>dashboard_outlined</mat-icon>
   <span class="menu-item-title">Home</span>
 </a>
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/newsfeed']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/newsfeed']">
   <mat-icon>menu_book</mat-icon>
   <span class="menu-item-title">News Feed</span>
 </a>
 
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/howtopage']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/howtopage']">
   <mat-icon>storage</mat-icon>
   <span class="menu-item-title">How To Invest</span>
 </a>
 
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/portfolio']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/portfolio']">
   <mat-icon>group</mat-icon>
   <span class="menu-item-title">Portfolio</span>
 </a>
 
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/catalogue']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/catalogue']">
   <mat-icon>monochrome_photos</mat-icon>
   <span class="menu-item-title">Catalogue</span>
 </a>
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/userpage']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/userpage']">
   <mat-icon>group_add</mat-icon>
   <span class="menu-item-title">Userpage</span>
 </a>
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/FAQs']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/faqs']">
   <mat-icon>camera</mat-icon>
   <span class="menu-item-title">FAQs</span>
 </a>
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/aboutus']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/about']">
   <mat-icon>folder_shared</mat-icon>
   <span class="menu-item-title">About Us</span>
 </a>
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/termsandconditions']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/terms']">
   <mat-icon>chrome_reader_mode</mat-icon>
   <span class="menu-item-title">T's and C's</span>
 </a>
-<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/pages/contactus']">
+<a class="simple-menu-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/dashboard/contact']">
   <mat-icon>contact_phone</mat-icon>
   <span class="menu-item-title">Contact Us</span>
 </a>
