--- a/src/app/pages/dashboard/maindashboard/maindashboard.component.html
+++ b/src/app/pages/dashboard/maindashboard/maindashboard.component.html
@@ -1,2 +1,108 @@
-<button mat-raised-button>asdf</button>
 <!--<div class="loading"><img src="assets/images/loading.gif"></div>-->
+<div class="p-header">Home</div>
+<div class="p-title">Hi, please see what happens!</div>
+<mat-card class="mb-3">
+  <mat-card-header>
+    Your World, Today
+  </mat-card-header>
+  <mat-divider></mat-divider>
+  <mat-card-content>
+    <div class="row">
+      <mat-form-field class="ml-auto mr-2 mt-2 w-50">
+        <mat-label>Please insert place address</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let business of businessData" value="{{business.name}}" (click)="onAddress(business.id)">{{business.name}}</mat-option>
+          <mat-option value="All" (click)="onAddressAll()">Default</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <agm-map [latitude]="lat" [zoom]="zoom" [longitude]="lng">
+      <agm-marker *ngFor="let data of mapData" [latitude]="data.lat" [longitude]="data.lng">
+      <agm-info-window>
+        <div class="feed">
+          <img [src]="data.pic">
+          <div class="content">
+            {{data.name}}<br/>
+            {{data.address}}<br/>
+            <span>by</span> {{data.userName}}
+          </div>
+        </div>
+      </agm-info-window>
+    </agm-marker>
+    </agm-map>
+  </mat-card-content>
+</mat-card>
+<mat-card>
+  <mat-card-header>
+    {{charts[0].title}}
+  </mat-card-header>
+  <mat-divider></mat-divider>
+  <google-chart [type]="charts[0].type"
+                [data]="charts[0].data"
+                [columnNames]="charts[0].columnNames"
+                [roles]="charts[0].roles"
+                [options]="charts[0].options"
+                style="width: 100%; height: 480px; padding-top: 16px; pointer-events: none"
+  >
+  </google-chart>
+</mat-card>
+<div class="row">
+  <div class="col-lg-4">
+    <mat-card>
+      <mat-card-header>{{charts[1].title}}</mat-card-header>
+      <mat-divider></mat-divider>
+      <google-chart [type]="charts[1].type"
+                    [data]="charts[1].data"
+                    [columnNames]="charts[1].columnNames"
+                    [roles]="charts[1].roles"
+                    [options]="charts[1].options"
+                    style="width: 100%;padding-top: 16px; height: 300px"
+      >
+      </google-chart>
+    </mat-card>
+  </div>
+  <div class="col-lg-8">
+    <mat-card>
+      <mat-card-header>{{charts[2].title}}</mat-card-header>
+      <mat-divider></mat-divider>
+      <google-chart [type]="charts[2].type"
+                    [data]="charts[2].data"
+                    [columnNames]="charts[2].columnNames"
+                    [roles]="charts[2].roles"
+                    [options]="charts[2].options"
+                    style="width: 100%; height: 480px; padding-top: 16px"
+      >
+      </google-chart>
+    </mat-card>
+  </div>
+</div>
+<mat-card>
+  <mat-card-header>Business List</mat-card-header>
+  <mat-divider></mat-divider>
+  <mat-card-content>
+    <div class="table-responsive">
+      <table mat-table [dataSource]="dataSource">
+        <ng-container matColumnDef="no">
+          <th mat-header-cell *matHeaderCellDef> No. </th>
+          <td mat-cell *matCellDef="let element"> {{element.no}} </td>
+        </ng-container>
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Business Name </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
+        <ng-container matColumnDef="location">
+          <th mat-header-cell *matHeaderCellDef> Country </th>
+          <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+        </ng-container>
+        <ng-container matColumnDef="address">
+          <th mat-header-cell *matHeaderCellDef> Address </th>
+          <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+  </mat-card-content>
+</mat-card>
