--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.css
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.css
@@ -67,7 +67,7 @@ mat-sidenav-container {
   top: 64px
 }
 mat-sidenav-content {
-  width: 100%;
+  padding: 16px;
   height: calc(100vh - 64px);
 }
 @media (max-width: 600px) {
