--- a/src/styles.css
+++ b/src/styles.css
@@ -7851,3 +7851,90 @@ button:active, button:focus {outline:0;border:none;-moz-outline-style:none;}
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.p-header {
+  font-size: 11px;
+  font-weight: 500;
+  line-height: 13px;
+  letter-spacing: 0.33px;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+.p-title {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: -0.06px;
+  margin-bottom: 16px
+}
+.mat-card-header {
+  color: #263238;
+  font-size: 16px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: -0.05px;
+  display: flex;
+  padding-bottom: 16px;
+  align-items: center;
+}
+.mat-card-header-text {
+  margin: 0!important;
+}
+.mat-card {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+.mat-table {
+  width: 100%;
+  display: table;
+  border-spacing: 0;
+  border-collapse: collapse;
+  color: #263238;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+}
+.mat-table thead {
+  display: table-header-group;
+  background-color: #fafafa;
+}
+.mat-table tr {
+  color: inherit;
+  display: table-row;
+  outline: 0;
+  vertical-align: middle;
+}
+.mat-table th {
+  font-weight: 500;
+  line-height: 1.5rem;
+  color: #263238;
+  display: table-cell;
+  padding: 16px;
+  font-size: 14px;
+  text-align: left;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  border-bottom: 1px solid #eeeeee;
+  letter-spacing: -0.05px;
+  vertical-align: inherit;
+}
+.mat-table td {
+  display: table-cell;
+  padding: 16px;
+  font-size: 14px;
+  text-align: left;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 21px;
+  border-bottom: 1px solid #eeeeee;
+  letter-spacing: -0.05px;
+  vertical-align: inherit;
+}
+.mat-table tr:hover {
+  background: #f4f6f8;
+}
+.table-responsive {
+  width: calc(100% + 32px);
+  margin-left: -16px;
+}
+
+.mat-table.odd tr:nth-child(odd){
+  background: #f4f6f8;
+}
