--- a/src/app/pages/dashboard/portfolio/portfolio.component.html
+++ b/src/app/pages/dashboard/portfolio/portfolio.component.html
@@ -73,7 +73,7 @@
                 </tbody>
               </table>
             </div>
-            <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true" [length]="totalSize"
+            <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]" [showFirstLastButtons]="true" [length]="detailsSize"
                            [pageIndex]="currentPage" (page)="handlePage($event)">
             </mat-paginator>
           </mat-card-content>
