--- a/src/styles.css
+++ b/src/styles.css
@@ -7939,3 +7939,71 @@ button:active, button:focus {outline:0;border:none;-moz-outline-style:none;}
 .mat-table.odd tr:nth-child(odd){
   background: #f4f6f8;
 }
+.profile-picture {
+  text-align: center;
+}
+.profile-picture img {
+  border-radius: 50%;
+  width: 120px;
+}
+.profile-picture .profile-name {
+  color: #263238;
+  font-size: 24px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: -0.06px;
+  margin: 8px 0;
+}
+.profile-picture .profile-detail {
+  font-size: 14px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: -0.05px;
+  color: #546e7a;
+  overflow-wrap: break-word;
+  width: 120px;
+  margin-left: calc(50% - 60px);
+}
+.file-upload-btn {
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
+}
+
+.file-upload-btn + label {
+  box-sizing: border-box;
+  position: relative;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  -webkit-tap-highlight-color: transparent;
+  display: inline-block;
+  white-space: nowrap;
+  text-decoration: none;
+  vertical-align: baseline;
+  text-align: center;
+  margin: 0;
+  min-width: 64px;
+  line-height: 36px;
+  padding: 0 16px;
+  border-radius: 4px;
+  overflow: visible;
+  color: inherit;
+  background: transparent;
+  font-family: Roboto,Helvetica Neue,sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.file-upload-btn + label:hover {
+  background-color: #f4f6f8;
+}
