aboutus(updatecard missed)

--- a/src/app/pages/dashboard/aboutus/aboutus.component.html
+++ b/src/app/pages/dashboard/aboutus/aboutus.component.html
@@ -1,1 +1,134 @@
-<p>aboutus works!</p>
+<div class="container">
+  <div class="p-header">About Us</div>
+  <div class="p-title">Here is detail about us</div>
+  <mat-accordion>
+    <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)">
+      <mat-expansion-panel-header>
+        <mat-panel-title>About Us</mat-panel-title>
+        <mat-panel-description>Description</mat-panel-description>
+      </mat-expansion-panel-header>
+      <div class="row">
+        <mat-card class="description">
+          <div class="header px-5 pb-2">
+            <img src="assets/images/auth_logo.png" class="logo-title hidden-xs" alt="img"/>
+            <div>MSE</div>
+          </div>
+          <p class="pb-5 pt-2 px-sm-5 text-justify">
+            &nbsp;Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen
+            book. It has survived not only five centuries, but also the leap into electronic
+            typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+            release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
+            when an unknown printer took a galley of type and scrambled it to make a type specimen
+            book. It has survived not only five centuries, but also the leap into electronic
+            typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
+            release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+            desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+        </mat-card>
+      </div>
+      <mat-action-row>
+        <button mat-button color="primary" (click)="nextStep()">Next</button>
+      </mat-action-row>
+    </mat-expansion-panel>
+    <mat-expansion-panel [expanded]="step === 1" (opened)="setStep(1)">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Card
+        </mat-panel-title>
+        <mat-panel-description>
+          Card Data
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <div class="row">
+        <div class="col-md-4 col-sm-12 my-4" *ngFor="let carddata of rowData">
+          <mat-card (click)="updateCard(carddata)" class="custom-mat-card">
+            <img [src]="carddata.imgurl" class="custom-card-img" alt="">
+            <mat-card-content>
+              <mat-card-title>{{carddata.headline}}</mat-card-title>
+              <mat-card-subtitle>{{carddata.section1}}</mat-card-subtitle>
+              <p>
+                {{carddata.section2}}
+              </p>
+            </mat-card-content>
+          </mat-card>
+        </div>
+      </div>
+      <mat-action-row>
+        <button mat-button color="warn" (click)="prevStep()">Previous</button>
+        <button mat-button color="primary" (click)="nextStep()">Next</button>
+      </mat-action-row>
+    </mat-expansion-panel>
+    <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)" *ngIf="showCrud">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Create Card
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <div class="row" style="display: block;">
+        <form enctype="multipart/form-data" [formGroup]="aboutForm">
+            <mat-card class="dashboard-card">
+              <div class="form-group text-center">
+                <input type="file" #fileInput (change)="fileChangeEvent($event)"
+                       style="display: none;"/>
+                <img class="user-avatar" (click)="chooseImage()" [src]="croppedImage"
+                     style="display: block;margin: 0 auto 15px auto;"/>
+                <div *ngIf="imageSelected" class="image-cropper-container">
+                  <image-cropper [imageChangedEvent]="imageChangedEvent" [maintainAspectRatio]="true"
+                                 [aspectRatio]="1.5 / 1.5" [resizeToWidth]="128"
+                                 [cropperMinWidth]="128" [onlyScaleDown]="true" [roundCropper]="false"
+                                 format="png" outputType="base64"
+                                 (imageCropped)="imageCropped($event)"
+                                 (imageLoaded)="imageLoaded()"
+                                 [style.display]="showCropper ? null : 'none'"
+                                 [alignImage]="'center'"></image-cropper>
+                  <div class="divider"></div>
+                  <div style="width: 100%;padding: 0 10px;margin-bottom: 15px;">
+                    <div class="half-width">
+                      <button type="button" (click)="imageSelected = false">Use
+                        this photo
+                      </button>
+                    </div>
+                    <div class="half-width">
+                      <button type="button" (click)="chooseImage()">another
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <button mat-raised-button color="primary" (click)="chooseImage()">
+                  <i class="fa fa-image"></i>
+                  Add Photo
+                </button>
+              </div>
+              <mat-form-field style="width: 100%">
+                <input matInput type="text" placeholder="Name" value={{rowselect_headline}}
+                       formControlName="headline" [ngClass]="{ 'is-invalid': submitted && f.headline.errors }">
+              </mat-form-field>
+              <mat-form-field style="width: 100%">
+                                    <textarea matInput placeholder="Sur Name" formControlName="section1" value={{rowselect_section1}}
+                                              [ngClass]="{ 'is-invalid': submitted && f.section1.errors }"></textarea>
+              </mat-form-field>
+              <mat-form-field style="width: 100%">
+                                    <textarea matInput placeholder="Short Details..." formControlName="section2" value={{rowselect_section2}}
+                                              [ngClass]="{ 'is-invalid': submitted && f.section2.errors }"></textarea>
+              </mat-form-field>
+              <div class="row" style="padding: 0 32px 0 32px;">
+                <button mat-raised-button color="primary" class="w-100"
+                        (click)="submitArticle();">
+                  Create Card
+                </button>
+              </div>
+            </mat-card>
+        </form>
+      </div>
+      <mat-action-row>
+        <button mat-button color="warn" (click)="prevStep()">Previous</button>
+        <button mat-button color="primary" (click)="nextStep()">End</button>
+      </mat-action-row>
+    </mat-expansion-panel>
+  </mat-accordion>
+</div>
