--- a/src/app/includes/dashboard/top-navbar/top-navbar.component.html
+++ b/src/app/includes/dashboard/top-navbar/top-navbar.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="logo">MSE</div>
   <div class="search-bar-wrapper hidden-xs">
-    <button mat-icon-button>
+    <button mat-icon-button class="search-btn">
       <mat-icon>search</mat-icon>
     </button>
     <label>
