--- a/src/app/pages/dashboard/faqs/faqs.component.html
+++ b/src/app/pages/dashboard/faqs/faqs.component.html
@@ -1,4 +1,6 @@
-<mat-accordion class="my-3">
+<div class="p-header">FAQS</div>
+<div class="p-title">Frequency Questions For You</div>
+<mat-accordion>
   <mat-expansion-panel>
     <mat-expansion-panel-header>
       <mat-panel-title>
